--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevEtMoi</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="logo"></div>
+      <div id="nav">
+        <a href="#">Accueil</a>
+        <a href="#">Contact</a>
+      </div>
+    </header>
+  </body>
 </html>
