--- a/index.html
+++ b/index.html
@@ -15,5 +15,69 @@
         <a href="#">Contact</a>
       </div>
     </header>
+
+    <section>
+      <div id="presentation">
+        <div id="logoLong"></div>
+        <h1>Agence de graphisme</h1>
+      </div>
+      <div id="content">
+        <div id="contentText">
+          <p>
+            Mon petit graphisme est une agence de graphisme qui aide les
+            entreprises à créer des visuels attractifs
+          </p>
+        </div>
+        <div id="contentDraw">
+          <div class="card">
+            <img src="./images/graphic-design.png" alt="graphic" />
+
+            <h2>graphisme</h2>
+            <div id="graphismeText" class="cardText">
+              <p>
+                Que vous ayez besoin de graphisme pour un site web des cartes de
+                visite ou des affiches, nous réalisons des visuels dont vous
+                serez fiers.
+              </p>
+            </div>
+          </div>
+          <div id="strategie" class="card">
+            <img src="./images/strategie.png" alt="strategie" />
+
+            <h2>strategie</h2>
+            <div id="strategieText" class="cardText">
+              <p>
+                Plutôt que de suggérer des graphismes à la mode, nous prenons le
+                temps de comprendre vos objectifs et nous nous adaptons à vos
+                besoins.
+              </p>
+            </div>
+          </div>
+          <div id="illustrations" class="card">
+            <img src="./images/illustrations.png" alt="illustrations" />
+
+            <h2>illustrations</h2>
+            <div id="illustrationsText" class="cardText">
+              <p>
+                Nos graphistes vous proposerons des illustrations 100%
+                originales.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div id="commentary">
+          <div id="commentaryText">
+            <p>
+              "Mon petit graphisme est une excellente agence de graphisme.Les
+              graphismes sont à l'écoute des besoins et m'ont permis de
+              renouveler complétement la carte de mon restaurant."
+            </p>
+          </div>
+          <div id="commentaryName">
+            <p>Amandine, restauratrice</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
