--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevEtMoi</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
   </head>
   <body>
     <header>
@@ -33,7 +37,7 @@
             <img src="./images/graphic-design.png" alt="graphic" />
 
             <h2>graphisme</h2>
-            <div id="graphismeText" class="cardText">
+            <div class="cardText">
               <p>
                 Que vous ayez besoin de graphisme pour un site web des cartes de
                 visite ou des affiches, nous réalisons des visuels dont vous
@@ -41,11 +45,11 @@
               </p>
             </div>
           </div>
-          <div id="strategie" class="card">
+          <div class="card">
             <img src="./images/strategie.png" alt="strategie" />
 
             <h2>strategie</h2>
-            <div id="strategieText" class="cardText">
+            <div class="cardText">
               <p>
                 Plutôt que de suggérer des graphismes à la mode, nous prenons le
                 temps de comprendre vos objectifs et nous nous adaptons à vos
@@ -79,5 +83,39 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <p>Mon petit graphisme-Agence de graphisme basée à Paris</p>
+      <div id="icones">
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+      <div id="footerNav">
+        <div class="footerNav">
+          <h3>Accés rapides</h3>
+          <ul>
+            <li>Accueil</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+        <div class="footerNav">
+          <h3>A propos</h3>
+          <ul>
+            <li>Données personnelles</li>
+            <li>Mentions légales</li>
+            <li>Cookies</li>
+          </ul>
+        </div>
+        <div class="footerNav">
+          <h3>Coordonnées</h3>
+          <ul class="ul">
+            <li>10 Quai de la Charente</li>
+            <li>75019 Paris</li>
+            <li>01 23 45 67 89</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
